# nebius-mlops-hw2

./: .env.example  .gitignore  .mise.toml  AGENTS.md  EXPERIMENT_LOG.md  README.md  REPORT.md  pyproject.toml
agent/: agno_experiment.py  deterministic_verifier.py  execution.py  graph.py  prompts.py  schema.py  server.py
evals/: run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
load_test/: driver.py
results/: eval_after_tuning.json  eval_baseline.json
scripts/: run_assignment.py  start_vllm.sh
tests/: test_deterministic_verifier.py  test_execution.py  test_graph_routing.py  test_load_metadata.py  test_prompt_profiles.py  test_schema_cache.py
